<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bt_connect_item"
        android:title="@string/menu_select_device" />
    <item
        android:id="@+id/lapRF_setup_item"
        android:title="@string/menu_laprf_setup" />
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/general_settings_item"
            android:title="@string/menu_general_settings" />

        <item
            android:id="@+id/pilot_settings_item"
            android:title="@string/menu_pilot_settings" />

        <item
            android:id="@+id/race_analysis_item"
            android:title="@string/menu_race_analysis" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/rssi_diags_setup_item_new"
            android:title="@string/menu_diagnostics" />
    </group>
</menu>